no absolute path

--- a/parallel.tex
+++ b/parallel.tex
@@ -84,12 +84,12 @@ resulting in a higher efficiency. Both parallel runs with 256 LPs and 1024 LPs a
 \begin{tabular}{cc}
 \begin{minipage}{200pt}
 %\frame{\includegraphics[width=200pt]{/Users/chayong/Documents/project2/figs/seq_runtime.png}}
-\includegraphics[width=3.0in]{/Users/chayong/Documents/project2/figs/p_runtime_1024.png}
+\includegraphics[width=3.0in]{figs/p_runtime_1024.png}
 \end{minipage}
 &
 \begin{minipage}{200pt}
 %\frame{\includegraphics[width=250pt]{/Users/chayong/Documents/project2/figs/seq_runtime.png}}
-\includegraphics[width=3.0in]{/Users/chayong/Documents/project2/figs/p_runtime_256.png}
+\includegraphics[width=3.0in]{figs/p_runtime_256.png}
 
 \end{minipage}
 \end{tabular}
