--- a/pdes.tex
+++ b/pdes.tex
@@ -17,7 +17,7 @@ The straight arrow represents a time for scheduling an event and the dotted arro
 
 \begin{figure} [h]
 \centering
-\includegraphics[width=5.2in]{/Users/chayong/Documents/project2/figs/sim_flow.png}
+\includegraphics[width=5.2in]{figs/sim_flow.png}
 \caption{Air Traffic Simulation Flow}
 \label{fig:sim_flow}
 \end{figure}
