--- a/sim_desc.tex
+++ b/sim_desc.tex
@@ -91,7 +91,7 @@ placed into its appropriate region.
 
 \begin{figure} [htb]
 \centering
-\includegraphics[width=3in]{/Users/chayong/Documents/project2/figs/map.png}
+\includegraphics[width=3in]{/Users/chayong/Dropbox/dsrt_2012/figs/map.png}
 \caption{Location of Airport Region}
 \label{fig:airport_region}
 \end{figure}
@@ -142,7 +142,7 @@ neighboring regions are shown in figure \ref{fig:approx_dist}.
 
 \begin{figure} [htb]
 \centering
-\includegraphics[width=3in]{/Users/chayong/Documents/project2/figs/map_graph.png}
+\includegraphics[width=3in]{figs/map_graph.png}
 \caption{Approximate Distance Between Central Locations}
 \label{fig:approx_dist}
 \end{figure}
