--- a/sim_results.tex
+++ b/sim_results.tex
@@ -46,7 +46,7 @@ departure requests, execution time, and total events processed.
 
 \begin{figure} [htd]
 \centering
-\includegraphics[width=2.5in]{/Users/chayong/Documents/project2/figs/seq_req_rejected.png}
+\includegraphics[width=2.5in]{figs/seq_req_rejected.png}
 \caption{Number of Rejected Departure Requests}
 \label{fig:seq_req_rejected}
 \end{figure}
@@ -56,14 +56,14 @@ departure requests, execution time, and total events processed.
 \begin{tabular}{cc}
 \begin{minipage}{200pt}
 %\frame{\includegraphics[width=200pt]{/Users/chayong/Documents/project2/figs/seq_runtime.png}}
-\includegraphics[width=200pt]{/Users/chayong/Documents/project2/figs/seq_runtime.png}
+\includegraphics[width=200pt]{figs/seq_runtime.png}
 \caption{Sequential Execution Time}
 \label{fig:seq_runtime}
 \end{minipage}
 &
 \begin{minipage}{200pt}
 %\frame{\includegraphics[width=250pt]{/Users/chayong/Documents/project2/figs/seq_runtime.png}}
-\includegraphics[width=200pt]{/Users/chayong/Documents/project2/figs/seq_events.png}
+\includegraphics[width=200pt]{figs/seq_events.png}
 \caption{Number of Net Events}
 \label{fig:seq_events}
 \end{minipage}
