--- a/software.tex
+++ b/software.tex
@@ -13,7 +13,7 @@ Due to the limitation of using arrays in Backstroke, we used Backstroke random n
 
 \begin{figure} [htd]
 \centering
-\includegraphics[width=4.2in]{/Users/chayong/Documents/project2/figs/software.png}
+\includegraphics[width=4.2in]{figs/software.png}
 \caption{Software Architecture of Air Traffic Simulation}
 \label{fig:software}
 \end{figure}
